--- a/Webapp/Resources/Styles/styles.less
+++ b/Webapp/Resources/Styles/styles.less
@@ -1,5 +1,7 @@
+@import url("colors.less");
 @import url("font.less");
 @import url("crossBrowser.less");
+@import url("themes.less");
 @import url("button.less");
 @import url("app.less");
 @import url("form.less");
