--- a/Webapp/Resources/Styles/app.less
+++ b/Webapp/Resources/Styles/app.less
@@ -1,9 +1,8 @@
-@elementPadding: 0.5em;
-@elementMargin: 0.5em;
+@elementPadding: 0.5rem;
+@elementMargin: 0.5rem;
 
 * {
-	.box-sizing(border-box); margin: 0; padding: 0; text-indent: 0; color: black;
-	font: Ubuntu, Arial, Helvetica, sans-serif;
+	.box-sizing(border-box); margin: 0; padding: 0; text-indent: 0;
 }
 html, body { height: 100%; overflow: hidden; }
 body { padding-top: 2cm; font-family: Ubuntu, Arial, Helvetica, sans-serif; }
@@ -26,13 +25,6 @@ body { padding-top: 2cm; font-family: Ubuntu, Arial, Helvetica, sans-serif; }
 	color: black; text-decoration: none;
 }
 
-
-
-figcaption:before { content: "✎"; color: white; margin-right: 0.25cm; font-weight: bold; font-size: 0.6cm;
-	background: green; background: linear-gradient(green,teal); border-radius: 0.5cm;
-	width: 0.6cm; height: 0.6cm; display: inline-block; text-align: center;
-	vertical-align: middle; padding: 0.1cm;
-}
 
 .pageFrame {
 	display: flex;
