--- a/book-renderer/src/components/molecules/Image.scss
+++ b/book-renderer/src/components/molecules/Image.scss
@@ -4,6 +4,7 @@
 	background-size: cover;
 
 	background-position: center center;
+	-webkit-print-color-adjust: exact;
 
 	&[data-position="top"] { background-position: top center; }
 	&[data-position="bottom"] { background-position: bottom center; }
@@ -17,6 +18,7 @@
 		font-weight: bold;
 		color: white;
 		background-color: rgba(0,0,0,0.25);
+		-webkit-print-color-adjust: exact;
 
 		&:empty {
 			background: none;
