--- a/book-renderer/src/components/molecules/Layout.scss
+++ b/book-renderer/src/components/molecules/Layout.scss
@@ -1,6 +1,7 @@
 .layout {
 	width: 100%; height: 100%;
 	background: rgb(245, 245, 245);
+	-webkit-print-color-adjust: exact;
 	display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between;
 	align-content: space-between;
 	overflow: hidden;
