--- a/book-renderer/src/components/molecules/Title.scss
+++ b/book-renderer/src/components/molecules/Title.scss
@@ -7,6 +7,7 @@
 		color: white;
 		padding: 0.25em;
 		background: black;
+		-webkit-print-color-adjust: exact;
 		text-align: center;
 		font-weight: bold;
 		border-radius: 0.25em;
