--- a/photobook-editor/src/Resources/Styles/app.less
+++ b/photobook-editor/src/Resources/Styles/app.less
@@ -4,6 +4,7 @@
 * {
 	.box-sizing(border-box); margin: 0; padding: 0; text-indent: 0;
 }
+html { font-size: 0.9rem; }
 html, body { height: 100%; overflow: hidden; }
 body { padding-top: 2cm; font-family: Ubuntu, Arial, Helvetica, sans-serif; }
 
