--- a/photobook-editor/src/Resources/Styles/styles.css
+++ b/photobook-editor/src/Resources/Styles/styles.css
@@ -271,6 +271,9 @@ a.button {
   padding: 0;
   text-indent: 0;
 }
+html {
+  font-size: 0.9rem;
+}
 html,
 body {
   height: 100%;
@@ -436,7 +439,7 @@ textarea.dragArea {
   background: white;
   padding: 0.1cm;
   text-align: center;
-  height: 2cm;
+  height: 1.5cm;
 }
 input[type="range"] {
   height: 2rem;
